--- a/index.html
+++ b/index.html
@@ -6,52 +6,96 @@
     <link rel="stylesheet" href="css/main.css"/>
     <title>Ultimate Meme Generator</title>
 </head>
-<body>
+<body onload="onInit()">
     <header class="main-header">
        <div class="logo">Mememe</div>
         <nav class="main-nav">
-            <ul class="main-nav-list">
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">About</a></li>
+            <ul class="main-nav-list" style="list-style: none">
+                <li><a href="#" style="text-decoration: none">Gallery</a></li>
+                <li><a href="#" style="text-decoration: none">About</a></li>
             </ul>
         </nav>
-        <button class="toggle-menu-btn" onclick="toggleMenu()" type="button">☰</button>
+        <button class="toggle-menu-btn" hidden onclick="toggleMenu()" type="button">☰</button>
     </header>
     
     <main class="main-content">
         <section class="img-gallery">
-            <section class="search-filter">
+            <section class="search-filter-options">
                 <div class="search-bar">
-                    <input type="text" class="search-text-input">
+                    <input type="text" class="search-text-input" placeholder="Enter search keyword">
                 </div>
-                <div class="filter-keywords">
-                    <button></button>
-                    <button></button>
-                    <button></button>
-                    <button></button>
+                <div class="filter-container">
+                    <button>funny</button>
+                    <button>surprised</button>
+                    <button>sad</button>
+                    <button>dogs</button>
                 </div>
             </section>
             
-            <section class="img-gallery-grid-container">
-                <article class="img-gallery-img">
-                    <img src="img/001.jpg" alt="funny meme">
+            <section class="gallery-grid-container">
+                <!-- <article class="gallery-img">
+                    <img src="meme-imgs/1.jpg" alt="funny meme" onclick="onSelectImg(this)">
                 </article>
-                <article class="img-gallery-img">
-                    <img src="img/002.jpg" alt="funny meme">
+                <article class="gallery-img">
+                    <img src="meme-imgs/2.jpg" alt="surprised meme" onclick="onSelectImg(this)">
                 </article>
-                <article class="img-gallery-img">
-                    <img src="img/003.jpg" alt="funny meme">
+                <article class="gallery-img">
+                    <img src="meme-imgs/3.jpg" alt="sad meme" onclick="onSelectImg(this)">
                 </article>
-                <article class="img-gallery-img">
-                    <img src="img/004.jpg" alt="funny meme">
+                <article class="gallery-img">
+                    <img src="meme-imgs/4.jpg" alt="dogs meme" onclick="onSelectImg(this)">
                 </article>
+                <article class="gallery-img">
+                    <img src="meme-imgs/5.jpg" alt="dogs meme" onclick="onSelectImg(this)">
+                </article>
+                <article class="gallery-img">
+                    <img src="meme-imgs/6.jpg" alt="dogs meme">
+                </article>
+                <article class="gallery-img">
+                    <img src="meme-imgs/7.jpg" alt="dogs meme">
+                </article>
+                <article class="gallery-img">
+                    <img src="meme-imgs/8.jpg" alt="dogs meme">
+                </article>
+                <article class="gallery-img">
+                    <img src="meme-imgs/9.jpg" alt="dogs meme">
+                </article>
+                <article class="gallery-img">
+                    <img src="meme-imgs/10.jpg" alt="dogs meme">
+                </article>
+                <article class="gallery-img">
+                    <img src="meme-imgs/11.jpg" alt="dogs meme">
+                </article>
+                <article class="gallery-img">
+                    <img src="meme-imgs/12.jpg" alt="dogs meme">
+                </article>
+                <article class="gallery-img">
+                    <img src="meme-imgs/13.jpg" alt="dogs meme">
+                </article>
+                <article class="gallery-img">
+                    <img src="meme-imgs/14.jpg" alt="dogs meme">
+                </article>
+                <article class="gallery-img">
+                    <img src="meme-imgs/15.jpg" alt="dogs meme">
+                </article>
+                <article class="gallery-img">
+                    <img src="meme-imgs/16.jpg" alt="dogs meme">
+                </article>
+                <article class="gallery-img">
+                    <img src="meme-imgs/17.jpg" alt="dogs meme">
+                </article>
+                <article class="gallery-img">
+                    <img src="meme-imgs/18.jpg" alt="dogs meme">
+                </article> -->
             </section>
         </section>
 
         <section class="meme-editor">
-            <canvas width="450" height="450" class="meme-editor-canvas">
+            <div class="canvas-container">   
+                <canvas width="450" height="450" class="meme-editor-canvas">
 
-            </canvas>
+                </canvas>
+            </div>
             <section class="editor-tools">
                 <input type="text" class="meme-text-input">
             </section>
@@ -60,14 +104,21 @@
     </main>
 
     <footer class="main-footer">
+        <div class="logo">Mememe</div>
         <small class="footer-right">@coffee rights 2024</small>
-        <ul class="footer-social flex clean-list">
+        <!-- <ul class="footer-social flex clean-list">
             <li><a href="#">facebook</a></li>
             <li><a href="#">twitter</a></li>
             <li><a href="#">instagram</a></li>
-        </ul>
+        </ul> -->
     </footer>
 
+    <script src="js/services/utils.service.js"></script>
+    <script src="js/services/storage.service.js"></script>
+    <script src="js/services/meme.service.js"></script>
+    <script src="js/services/share-to-facebook.service.js"></script>
+    <script src="js/gallery.controller.js"></script>
+    <script src="js/meme.controller.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
