Refactor editor service and display

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <input type="text" class="meme-text-input" placeholder="Add Text Here" oninput="onAddTxt(this.value)">
                 <div class="actions">
                     <button onclick="onSave()">Save</button>
-                    <!-- <button onclick="onLoad()">Load</button>
-                    <button onclick="onClearCanvas()">Clear</button> -->
+                    <button onclick="onLoad()">Load</button>
+                    <!-- <button onclick="onClearCanvas()">Clear</button> -->
                 </div>
             </div>
         </section>
