Add set text fill color

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
                     <button onclick="onSave()">Save</button>
                     <button onclick="onLoad()">Load</button>
                     <!-- <button onclick="onClearCanvas()">Clear</button> -->
+                    <!-- <button class="set-color" onclick="onSetColor()"></button> -->
+                    <input type="color" id="set-color" onchange="onSetColor()">
                 </div>
             </div>
         </section>
