Add toggle gallery and meme editor

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        <div class="logo">memeMe</div>
         <nav class="main-nav">
             <ul class="main-nav-list" style="list-style: none">
-                <li><a href="#" style="text-decoration: none">Gallery</a></li>
+                <li><a href="#" onclick="displayGallery()" style="text-decoration: none">Gallery</a></li>
                 <li><a href="#" style="text-decoration: none">About</a></li>
             </ul>
         </nav>
