Minor refactoring meme service and controller and onInit

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/main.css"/>
     <title>Ultimate Meme Generator</title>
 </head>
-<body class="body" onload="onInit()">
+<body onload="onInit()">
     
     <div class="main-screen" onclick="toggleMenu()"></div>
 
